# haskell-book-exercises

./: .gitignore  10-folding-lists.hs  11-binary-tree.hs  11-phone.hs  12-either.hs  12-iterate-and-unfoldr.hs  12-nat.hs  12-validate-the-word.hs  8-recursion.hs  README.md
11-algebraic-datatypes/: 11-algebraic-datatypes.hs  11-huttons-razor.hs  11-phone.hs
12-signaling-adversity/: 12-binary-tree.hs  12-iterate-and-unfoldr.hs  12-maybe.hs  12-not-the.hs
13-building-projects/ex/: palindrome.hs  person.hs
13-building-projects/hangman/: hangman.cabal
13-building-projects/hangman/src/: Main.hs
13-monoid/: Main.hs  def.hs  monoid.cabal
14-testing/addition/: addition.cabal
14-testing/addition/src/: Addition.hs
14-testing/exercises/: exercises.cabal
14-testing/exercises/src/: Main.hs  WordNumber.hs
14-testing/exercises/tests/: tests.hs
14-testing/morse/: morse.cabal
14-testing/morse/src/: CoArbitrary.hs  Main.hs  Morse.hs  SumGen.hs  Trivial.hs
14-testing/morse/tests/: tests.hs
15-monoid/: Main.hs  exercises.hs  mad-libs.hs  monoid-QuickCheck.hs  monoid.cabal
15-monoid/Types/: BoolConj.hs  Combine.hs  Identity.hs  Or.hs  Three.hs  Trivial.hs  Two.hs  Validation.hs
16-functor/: BadNat.hs  Main.hs  Possibly.hs  ReplaceExperiment.hs  TestLaws.hs  exercises.hs  functor.cabal
16-functor/Types/: Four.hs  Identity.hs  Pair.hs  Three.hs  Two.hs
17-applicative/: Apl1.hs  BadMonoid.hs  Cow.hs  ListApplicative.hs  Main.hs  Person.hs  Validation.hs  applicative.cabal  exercises.hs  instances.hs  stop-vowel-stop.hs  types-exercises.hs
18-monad/: BadMonad.hs  Cow.hs  EitherMonad.hs  askForAge.hs  getLine.hs  monad.cabal  testLaws.hs
18-monad/exercises/: Identity.hs  List.hs  Nope.hs
19-applying-structure/: Main.hs  app.cabal  time.hs
19-applying-structure/shawty/: shawty.cabal
19-applying-structure/shawty/src/: Main.hs
20-foldable/: Identity.hs  exercises.hs
21-traversable/http-stuff/: http-stuff.cabal
21-traversable/http-stuff/src/: Either.hs  HttpStuff.hs
21-traversable/tests/: tests.cabal
21-traversable/tests/src/: Constant.hs  Identity.hs  Main.hs  Maybe.hs
22-reader/: PersonNDog.hs  PrettyReader.hs  Reader.hs  ReaderPractice.hs  readerApplicative.hs
23-state/: FizzBuzz.hs  Main.hs  Moi.hs  RandomExample.hs  state.cabal
24-parser-combinators/exercises/: exercises.cabal
24-parser-combinators/exercises/src/: NumbersParser.hs  PhoneParser.hs  SemVer.hs
24-parser-combinators/proj/: proj.cabal
24-parser-combinators/proj/src/: AltParsing.hs  BT.hs  Fractions.hs  Ini.hs  LearningParsers.hs  Main.hs  Marshalling.hs  TryTry.hs
25-composing-types/proj/src/: Bifunctor.hs  ComposeInstances.hs  IdentityT.hs  Main.hs
26-monad-transfomers/proj/: proj.cabal
26-monad-transfomers/proj/src/: ChapterExercises.hs  EitherT.hs  FixTheCode.hs  HitCounter.hs  MaybeT.hs  MonadIOExercises.hs  MonadTransInstances.hs  OuterInner.hs  ReaderT.hs  StateT.hs  scotty.hs  sctotty-exceptt.hs
