name:                monoid
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/monoid#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable monoid
  hs-source-dirs:      .
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , hspec
                       , QuickCheck


-- library
--   exposed-modules:     Monoid
--   build-depends:       base >= 4.7 && < 5
--                        , hspec
--                        , QuickCheck
--   hs-source-dirs:      .
--   default-language:    Haskell2010
