name:                state
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/state#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable state
  hs-source-dirs:      .
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , transformers

library
  exposed-modules:     Moi
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >= 4.7 && < 5
  hs-source-dirs:      .
  default-language:    Haskell2010
