name:                exercises
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/exercises#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable exercises
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                       , QuickCheck
  default-language:    Haskell2010

library
  exposed-modules:     WordNumber
  build-depends:       base >= 4.7 && < 5
                       , QuickCheck
                       , hspec
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             tests.hs
  hs-source-dirs:      tests
  build-depends:       base >= 4.7 && < 5
                       , exercises
                       , QuickCheck
                       , hspec
  default-language:    Haskell2010

